support basic auth api
